--- a/CRM/views/entry-event.ejs
+++ b/CRM/views/entry-event.ejs
@@ -26,7 +26,7 @@
           <div class="card-body">
       <div class="form-row">
           <div class="form-group col">
-            <label for="clientName">Date</label>
+            <label for="eventDate">Date</label>
             <input type="date" class="form-control" id="eventDate" name="eventDate" required>
           </div>
           <div class="form-group col">
