--- a/CRM/views/search-event.ejs
+++ b/CRM/views/search-event.ejs
@@ -20,13 +20,14 @@
     <main class="main mt-2 ml-3">
         <div class="card w-50">
           <h3 class="card-header">View/Edit Event</h3>
+          <form id="search-event" name="search-event" method="post" action="/search-event">
           <div class="card-body">
 
       <!-- Select Agent from Prepopulated list of options -->
               <div class="form-row">
                 <div class="form-group col-12">
                   <label for="agentSelect">Select Client</label>
-                  <select class="form-control" name="clientID" onChange="changeAgent(this.value);">
+                  <select class="form-control" name="clientName" id="clientName">
                   <%
                       var list = '';
                       for (i = 0; i < locals.clients.length; i++) {
@@ -42,18 +43,18 @@
                     <div class="form-row">
                       <div class="form-group col-6">
                         <label for="inputEmail4">Date Range Start</label>
-                        <input type="date" class="form-control" id="date-start-input" placeholder="Email" required>
+                        <input type="date" class="form-control" id="dateStartInput" name="dateStartInput" required>
                       </div>
                       <div class="form-group col-6">
                         <label for="inputPassword4">Date Range End</label>
-                        <input type="date" class="form-control" id="date-end-input" placeholder="Password" required>
+                        <input type="date" class="form-control" id="dateEndInput" name="dateEndInput" required>
                       </div>
                     </div>
 
       <!-- Submit Button to execute -->
               <div class="form-row">
                 <div class="form-group col">
-                  <button type="button" class="btn btn-primary">Submit</button>
+                  <input class="btn btn-primary" type="submit" value="Submit">
                 </div>
               </div>
 
