--- a/CRM/views/register.ejs
+++ b/CRM/views/register.ejs
@@ -18,6 +18,11 @@
             <label>Password</label>
             <input type="password" class="form-control" name="password">
         </div>
+        <div class="form-group">
+            <label>Registration Code</label>
+            <input type="text" class="form-control" name="regCode">
+        </div>
+
 
         <button type="submit" class="btn btn-warning btn-lg">Signup</button>
     </form>
