--- a/CRM/views/partials/sidebar.ejs
+++ b/CRM/views/partials/sidebar.ejs
@@ -89,7 +89,7 @@
           <i class="nav-icon cui-cloud-download"></i>PLACEHOLDER</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link nav-link-danger" href="#">
+        <a class="nav-link nav-link-danger" href="/logout">
           <i class="nav-icon cui-account-logout "></i>
           LOG OUT
         </a>
