CRM-66 - Added 'Selected' option on all applicable dropdowns

--- a/CRM/views/entry-agent.ejs
+++ b/CRM/views/entry-agent.ejs
@@ -52,6 +52,7 @@
           <div class="form-group col">
             <label for="agentPosition">Position</label>
             <select class="form-control" id="agentPosition" name="agentPosition">
+            <option value="" disabled selected>Select</option>
       		  <option>Sales Executive</option>
       		  <option>Office</option>
       		  <option>Sales Manager</option>
