--- a/CRM/views/report-client-list.ejs
+++ b/CRM/views/report-client-list.ejs
@@ -29,7 +29,7 @@
                   <label for="agentSelect">Agent</label>
                   <select class="form-control" name ="agentAbbrev" id="agentAbbrev">
                     <%
-                        var list = '';
+                        var list = '<option value="" disabled selected>Select</option>';
                         for (i = 0; i < agentList.length; i++) {
                           list += '<option>' + agentList[i].agentAbbrev + '</option>';
                         }
