--- a/CRM/views/report-visit-count.ejs
+++ b/CRM/views/report-visit-count.ejs
@@ -39,9 +39,9 @@
             <div class="form-row">
               <div class="form-group col-6">
                 <label for="agentSelect">Agent</label>
-                <select class="form-control" id="agentSelect" name="agentSelect">
+                <select class="form-control" id="agentSelect" name="agentSelect" required>
                   <%
-                      var list = '';
+                      var list = '<option value="" disabled selected>Select</option>';
                       for (i = 0; i < agentList.length; i++) {
                         list += '<option>' + agentList[i].agentAbbrev + '</option>';
                       }
