--- a/CRM/views/partials/sidebar.ejs
+++ b/CRM/views/partials/sidebar.ejs
@@ -1,4 +1,5 @@
 
+<link rel="stylesheet" href="https://unpkg.com/browse/@coreui/coreui@2.1.16/dist/css/coreui.min.css">
 
 
   <nav class="sidebar-nav">
