--- a/CRM/views/view-client.ejs
+++ b/CRM/views/view-client.ejs
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <link rel='stylesheet' href='https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css'>
+    <link rel='stylesheet' href='https://unpkg.com/@coreui/coreui@2.1.16/dist/css/coreui.min.css'>
     <link rel="stylesheet" href="https://unpkg.com/@coreui/icons/css/coreui-icons.min.css">
   </head>
 
