--- a/CRM/views/partials/header.ejs
+++ b/CRM/views/partials/header.ejs
@@ -5,6 +5,6 @@
 <!-- CSS (load bootstrap from a CDN) -->
 
 <link rel="stylesheet" href="https://unpkg.com/@coreui/coreui@2.1.16/dist/css/coreui.min.css">
-<link rel="stylesheet" href="https://unpkg.com/@coreui/icons/css/coreui-icons.min.css">
+<link rel="stylesheet" href="https://unpkg.com/@coreui/icons@1.0.0/css/all.min.css">
 
 <strong>Current User: </strong> <u class="text-primary"> <%- user %></u>
