--- a/CRM/views/partials/sidebar-dropdown.ejs
+++ b/CRM/views/partials/sidebar-dropdown.ejs
@@ -1,5 +1,5 @@
 <link rel='stylesheet' href='https://unpkg.com/@coreui/coreui@2.1.16/dist/css/coreui.min.css' />
-<link rel="stylesheet" href="https://unpkg.com/@coreui/icons/css/coreui-icons.min.css">
+<link rel="stylesheet" href="https://unpkg.com/@coreui/icons@1.0.0/css/all.min.css">
 
 
   <nav class="sidebar-nav">
