--- a/CRM/views/view-client.ejs
+++ b/CRM/views/view-client.ejs
@@ -3,7 +3,8 @@
 
   <head>
     <link rel='stylesheet' href='https://unpkg.com/@coreui/coreui@2.1.16/dist/css/coreui.min.css'>
-    <link rel="stylesheet" href="https://unpkg.com/@coreui/icons/css/coreui-icons.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/@coreui/icons@1.0.0/css/all.min.css">
+
   </head>
 
 <body class="app header-fixed footer sidebar-show sidebar-nav">
