--- a/CRM/views/partials/sidebar.ejs
+++ b/CRM/views/partials/sidebar.ejs
@@ -36,6 +36,7 @@
         </a>
       </li>
 
+
 <!-- Quick View Links-->
 
       <li class="nav-title">QUICK VIEW/EDIT</li>
@@ -85,6 +86,31 @@
           <i class="nav-icon cui-people"></i> Contact History
         </a>
       </li>
+
+
+
+<!-- Import Files Links-->
+
+      <li class="nav-title">Import File</li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="/import-client">
+          <i class="nav-icon cui-briefcase "></i> Import Clients
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/import-contact">
+          <i class="nav-icon cui-user"></i> Import Contacts
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/import-agent">
+          <i class="nav-icon cui-calendar"></i> Import Agents
+        </a>
+      </li>
+
+
+
       <li class="nav-item mt-auto">
         <a class="nav-link nav-link-info" href="#">
           <i class="nav-icon cui-cloud-download"></i>PLACEHOLDER</a>
@@ -95,5 +121,11 @@
           LOG OUT
         </a>
       </li>
+
+
+
+
+
+
     </ul>
   </nav>
